cabal-version:      3.0

name:               advent2021
version:            0.1.0.0
build-type:         Simple

synopsis:           Advent of code exercises, 2021
description:        Advent of code exercises, 2021
category:           Web
author:             Michael Hoy
maintainer:         mjh@mjhoy.com

executable advent
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -threaded
  default-language: Haskell2010
  build-depends:    base == 4.*
  other-modules:    Days.Day1
                  , Days.Day2
                  , Days.Day2_2
                  , Days.Day3
